# grocery-scraper

./: .gitignore  CLAUDE.md  README.md  gemini.md  main.py  profile_performance.py  pyproject.toml  scrapling_docs.md
app/: common_queries.py  errors.py  models.py  walmart.py
app/aldi/: TEST_verify_aldi_stores.py  __init__.py  client.py  constants.py  export.py  locate_store.py  parser.py  search_products.py  spider.py  store_search.py
app/api/: dependencies.py  exceptions.py  main.py
app/cli/: __init__.py  interactive.py
app/kroger/: __init__.py  browser_pool.py  client.py  constants.py  export.py  locate_store.py  parser.py  search_products.py  spider.py  store_search.py
app/matching/: __init__.py  brands.py  models.py  normalizer.py  rules.py  scorer.py  service.py  similarity.py  units.py
app/publix/: __init__.py  client.py  constants.py  export.py  locate_store.py  parser.py  search_products.py  spider.py  store_search.py
app/utils/: build_cookies.py  build_kroger_cookies.py  cache.py  display.py  fetcher.py  get_next_data.py  product_cache.py  store_cache.py  store_client.py  store_selection.py  zip2loc.py
app/walmart/: __init__.py  client.py  constants.py  export.py  locate_store.py  parser.py  search.py  search_products.py  spider.py  store.py  store_search.py  test_spider.py
tests/: conftest.py  test_api.py  test_locate_store_caching.py  test_matching_api.py
tests/integration/: test_walmart_search.py
tests/performance/: __init__.py  assertions.py  baseline_manager.py  conftest.py  test_aldi_performance.py  test_kroger_performance.py  (+1 more)
(+27 files in other folders)
